Refine telemetry generator with adjusted pressure ranges and updated hydraulic pressure configuration. Expand documentation for enhanced clarity, including new quick reference and Docker deployment guides, and update module breakdown.