@@ -6,13 +6,22 @@
 
 ## Quick Links
 
-| Document | Description | Lines | Status |
-|----------|-------------|-------|--------|
-| [README.md](README.md) | Complete project overview and setup guide | 1,001 | ✅ Complete |
-| [DIAGRAMS.md](DIAGRAMS.md) | Architecture diagrams (sequence, class, infrastructure) | 1,160 | ✅ Complete |
-| [TEST_COVERAGE_SUMMARY.md](TEST_COVERAGE_SUMMARY.md) | Test coverage documentation | 334 | ✅ Complete |
-| [TEST_UPDATE_SUMMARY.md](TEST_UPDATE_SUMMARY.md) | Test suite update details | 485 | ✅ Complete |
-| [TEST_FIXES_SUMMARY.md](TEST_FIXES_SUMMARY.md) | Test fixes and solutions | 289 | ✅ Complete |
+| Document | Description | Status |
+|----------|-------------|--------|
+| [README.md](README.md) | Complete project overview and setup guide | ✅ Complete |
+| [DIAGRAMS.md](DIAGRAMS.md) | Architecture diagrams (sequence, class, infrastructure) | ✅ Complete |
+| [QUICK_REFERENCE.md](QUICK_REFERENCE.md) | Quick start commands and API reference | ✅ Complete |
+| [PROJECT_COMPLETE.md](PROJECT_COMPLETE.md) | Project completion summary | ✅ Complete |
+| [DATA_GENERATOR_SUMMARY.md](DATA_GENERATOR_SUMMARY.md) | Data generator implementation details | ✅ Complete |
+| [DOCKER_SETUP_GUIDE.md](DOCKER_SETUP_GUIDE.md) | Docker deployment guide | ✅ Complete |
+| [DOCKER_COMPOSE_FIX_SUMMARY.md](DOCKER_COMPOSE_FIX_SUMMARY.md) | Docker Compose configuration fixes | ✅ Complete |
+| [DOCKER_COMPLETE_RESOLUTION.md](DOCKER_COMPLETE_RESOLUTION.md) | Complete Docker resolution guide | ✅ Complete |
+| [DOCKERFILE_BASE_IMAGE_FIX.md](DOCKERFILE_BASE_IMAGE_FIX.md) | Dockerfile base image fixes | ✅ Complete |
+| [DIAGRAM_CREATION_SUMMARY.md](DIAGRAM_CREATION_SUMMARY.md) | Diagram creation documentation | ✅ Complete |
+| [DIAGRAM_FIX_SUMMARY.md](DIAGRAM_FIX_SUMMARY.md) | Diagram syntax fixes | ✅ Complete |
+| [UI_ACCESS_QUICK_FIX.md](UI_ACCESS_QUICK_FIX.md) | UI access troubleshooting | ✅ Complete |
+| [simple-flink-test.md](simple-flink-test.md) | Flink test notes | ✅ Complete |
+| [ahs-data-generator/README.md](ahs-data-generator/README.md) | Data generator module README | ✅ Complete |
 
 ---
 
@@ -94,76 +103,50 @@
 
 ---
 
-### 3. TEST_COVERAGE_SUMMARY.md - Testing Documentation
+### 3. PROJECT_COMPLETE.md - Project Summary
 
-**Purpose**: Comprehensive test documentation  
-**Audience**: QA Engineers, Developers
+**Purpose**: Project completion summary  
+**Audience**: All stakeholders
 
 **Contents**:
-- Test strategy and approach
-- 8 test files with 1,325+ lines of test code
-- 80+ test methods across all modules
-- Coverage metrics by module
-- Test categories (unit, integration, E2E)
-
-**Test Breakdown**:
-- **ahs-data-generator**: 27 tests (vehicle simulation, telemetry generation)
-- **ahs-domain**: 24 tests (domain models, events)
-- **ahs-fleet-management**: 17 tests (service operations, statistics)
-- **ahs-telemetry-processor**: 52 tests (Flink processing, alerts, metrics)
+- Complete module status
+- What was fixed during development
+- System architecture overview
+- Quick start guide
+- Performance testing scenarios
+- Key features and technologies
 
 ---
 
-### 4. TEST_UPDATE_SUMMARY.md - Test Modernization
+### 4. DOCKER_SETUP_GUIDE.md - Docker Deployment
 
-**Purpose**: Documentation of test suite alignment with implementation  
-**Audience**: Developers, Technical Leads
+**Purpose**: Docker deployment documentation  
+**Audience**: DevOps, Developers
 
 **Contents**:
-- Analysis of implementation vs test discrepancies
-- 6 test files updated (1,657 lines)
-- Key discoveries about actual implementation
-- Method signature corrections
-- Field naming conventions
-- Builder pattern usage
-
-**Major Updates**:
-1. VehicleStatus enum alignment (10 states vs 5)
-2. TelemetryDataGenerator signature (2 parameters, not 3)
-3. VehicleTelemetryEvent constructor pattern (not @Builder)
-4. FleetStatistics inner class usage
-5. VehicleMetrics field naming (camelCase vs snake_case)
+- Dockerfile creation details
+- Multi-stage build optimization
+- Health check configuration
+- Quick start commands
+- Troubleshooting guide
+- Production deployment notes
 
 ---
 
-### 5. TEST_FIXES_SUMMARY.md - Test Debugging Guide
+### 5. DIAGRAMS.md - Visual Architecture
 
-**Purpose**: Record of test failures and solutions  
-**Audience**: Developers, DevOps
+**Purpose**: Visual system design documentation  
+**Audience**: Architects, Senior Engineers, Stakeholders
 
-**Issue Categories**:
-
-#### Issue 1: FleetManagementServiceTest (11 failures)
-- **Problem**: @PostConstruct not called in plain JUnit
-- **Solution**: Manual `initialize()` call in @BeforeEach
-- **Root Cause**: Spring lifecycle not active outside container
-
-#### Issue 2: Flink Module Access (48 failures)
-- **Problem**: Java 9+ module system blocks Flink
-- **Solution**: Add `--add-opens` JVM arguments
-- **Root Cause**: Kryo serialization requires internal API access
-
-#### Issue 3: Deserializer Initialization (1 failure)
-- **Problem**: ObjectMapper null pointer
-- **Solution**: Call `open()` before `deserialize()`
-- **Root Cause**: Flink lifecycle method not invoked
-
-#### Issue 4: Empty Stream Handling (1 failure)
-- **Problem**: IllegalArgumentException on keyBy()
-- **Solution**: Provide explicit TypeInformation
-- **Root Cause**: Flink cannot infer types from empty collections
-
-**Results**: 100% test pass rate (124/124 tests)
+**Contains 18 comprehensive Mermaid diagrams** covering:
+- High-level system architecture
+- Sequence diagrams for data flows
+- Vehicle state machine
+- Class diagrams (domain, service, Flink)
+- Infrastructure diagrams (Docker, Kubernetes, AWS)
+- Kafka topic architecture
+- Flink processing pipeline
+- Error handling flows
 
 ---
 
@@ -175,24 +158,22 @@
 |--------|-------|
 | **Modules** | 8 |
 | **Java Classes** | 85+ |
-| **Test Classes** | 14 |
-| **Test Methods** | 124 |
 | **Lines of Code** | ~15,000 |
-| **Documentation Lines** | 3,269 |
-| **Diagrams** | 11 |
+| **Documentation Files** | 14 |
+| **Mermaid Diagrams** | 18 |
 
 ### Module Breakdown
 
-| Module | Purpose | Classes | Tests |
-|--------|---------|---------|-------|
-| ahs-common | Shared utilities | 5 | 0 |
-| ahs-domain | Domain models, events | 12 | 31 |
-| ahs-data-generator | Vehicle simulation | 8 | 25 |
-| ahs-fleet-management | Fleet operations API | 6 | 16 |
-| ahs-telemetry-processor | Stream processing | 15 | 52 |
-| ahs-thrift-api | Thrift definitions | 3 | 0 |
-| ahs-vehicle-service | Vehicle CRUD | 4 | 0 |
-| ahs-stream-analytics | Analytics engine | 8 | 0 |
+| Module | Purpose | Description |
+|--------|---------|-------------|
+| ahs-common | Shared utilities | Common helper classes |
+| ahs-domain | Domain models | Vehicle, Telemetry, Events |
+| ahs-data-generator | Vehicle simulation | Realistic telemetry generation |
+| ahs-fleet-management | Fleet API | REST API for fleet operations |
+| ahs-telemetry-processor | Stream processing | Flink real-time analytics |
+| ahs-thrift-api | Thrift definitions | RPC service definitions |
+| ahs-vehicle-service | Vehicle CRUD | Vehicle management service |
+| ahs-stream-analytics | Analytics engine | Stream analytics jobs |
 
 ### Technology Stack
 
@@ -339,9 +320,9 @@ mmdc -i DIAGRAMS.md -o diagrams.png
 ### Immediate
 1. ✅ Review README.md for project overview
 2. ✅ Study DIAGRAMS.md for architecture understanding
-3. ✅ Check TEST_FIXES_SUMMARY.md for test status
+3. ✅ Check DOCKER_SETUP_GUIDE.md for deployment
 4. ✅ Run `docker-compose up -d` to start environment
-5. ✅ Execute `./gradlew test` to verify all tests pass
+5. ✅ Execute `./gradlew build` to build all modules
 
 ### Short-Term
 1. Deploy to development Kubernetes cluster
@@ -369,8 +350,8 @@ mmdc -i DIAGRAMS.md -o diagrams.png
 ### Internal Resources
 - Architecture Review: DIAGRAMS.md
 - API Reference: README.md (API section)
-- Test Guide: TEST_COVERAGE_SUMMARY.md
-- Troubleshooting: TEST_FIXES_SUMMARY.md
+- Docker Guide: DOCKER_SETUP_GUIDE.md
+- Quick Reference: QUICK_REFERENCE.md
 
 ### Contact
 - **Project Lead**: Shoulico Freeman
@@ -380,5 +361,5 @@ mmdc -i DIAGRAMS.md -o diagrams.png
 ---
 
 **Last Updated**: November 29, 2025  
-**Documentation Version**: 1.0  
-**Project Status**: ✅ All tests passing, Production ready
+**Documentation Version**: 1.1  
+**Project Status**: ✅ Build successful, Ready for deployment
